--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,5 +10,5 @@ phases:
        - echo Build complete success
 artifacts:
    files:
-      - target/java-aws-exmple.jar
+      - target/calculator-ms.jar
    discard-paths: yes
